force-app/main/default/objects/Case/fields/Add_a_Message__c.field-meta.xml
<CustomField>
    <fullName>Add_a_Message__c</fullName>
    <label>Add a Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>