force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The address being actioned or discussed in the case.</description>
    <inlineHelpText>What address is the case referencing?</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>