force-app/main/default/objects/Case/fields/AddressID__c.field-meta.xml
<CustomField>
    <fullName>AddressID__c</fullName>
    <label>Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>