force-app/main/default/objects/Case/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <description>Select from: App - NTE, Phone - NTE, Client</description>
    <label>Approved By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App-NTE</fullName>
            </value>
            <value>
                <fullName>Phone-NTE</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>