force-app/main/default/objects/Case/fields/Assigned_By_Market__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By_Market__c</fullName>
    <description>NOT IN USE, DEPRECIATED - DO NOT USE</description>
    <formula>OR(
Region_ID__c = &quot;wa&quot;, Region_ID__c = &quot;WA&quot;, Region_ID__c = &quot;or&quot;, Region_ID__c = &quot;OR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned By Market</label>
    <type>Checkbox</type>
</CustomField>