force-app/main/default/objects/Case/fields/Auto_Gen_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Auto_Gen_Task_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of auto-generated tasks. Use for process builder task auto-creation.</description>
    <inlineHelpText>Number of Auto Generated Tasks</inlineHelpText>
    <label>Auto Generated Tasks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>