force-app/main/default/objects/Case/fields/Auto_Market_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Market_Assignment__c</fullName>
    <formula>IF( 
CONTAINS(&quot;AL:AR:LA:MS:NC:SC:TN&quot;, Region_ID__c),&quot;South Market&quot;, 
IF( 
CONTAINS( &quot;AK:AZ:CA:CO:HI:ID:MT:NM:NV:OR:UT:WA:WY&quot;, Region_ID__c),&quot;West Market&quot;, 
IF( 
CONTAINS(&quot;CT:DC:DE:IA:IL:IN:KS:KY:MA:MD:ME:MI:MN:MO:NH:NJ:NY:OH:PA:RI:VA:VT:WI:WV&quot;, Region_ID__c),&quot;Northeast Market&quot;, 
IF( 
CONTAINS(&quot;FL:GA&quot;, Region_ID__c),&quot;Florida and Georgia Market&quot;, 
IF(
CONTAINS(&quot;NE:SD:ND:OK:TX&quot;, Region_ID__c), &quot;Plains Market&quot;,
&quot;Not Assigned&quot; 
) 
) 
) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Market Assignment</label>
    <type>Text</type>
</CustomField>