force-app/main/default/objects/Case/fields/AverageLawnHeight__c.field-meta.xml
<CustomField>
    <fullName>AverageLawnHeight__c</fullName>
    <description>Average height of lawn at time of additional fund request</description>
    <label>Average Lawn Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>