force-app/main/default/objects/Case/fields/BPI_Data_Entered_in_Client_Raw_File__c.field-meta.xml
<CustomField>
    <fullName>BPI_Data_Entered_in_Client_Raw_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for the BPI request process - replaces the depreciated Google form that was filled out by the Client team</description>
    <label>Data Entered in Client Raw File</label>
    <type>Checkbox</type>
</CustomField>