force-app/main/default/objects/Case/fields/BPI_File_Type__c.field-meta.xml
<CustomField>
    <fullName>BPI_File_Type__c</fullName>
    <description>This field is used for the BPI request process - replaces the depreciated Google form that was filled out by the Client team</description>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BPI_One-Time File Run</fullName>
                <label>One-Time File Run</label>
            </value>
            <value>
                <fullName>BPI_Daily List</fullName>
                <label>Daily List</label>
            </value>
            <value>
                <fullName>BPI_Weekly List</fullName>
                <label>Weekly List</label>
            </value>
            <value>
                <fullName>BPI_Pricing Only</fullName>
                <label>Pricing Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>