force-app/main/default/objects/Case/fields/BPI_Pricing_Template_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>BPI_Pricing_Template_Hyperlink__c</fullName>
    <description>This field is used for the BPI request process - replaces the depreciated Google form that was filled out by the Client team</description>
    <label>Pricing Template Hyperlink</label>
    <type>Url</type>
</CustomField>