force-app/main/default/objects/Case/fields/BPI_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>BPI_Request_Status__c</fullName>
    <description>This is the BPI status field for used for the BPI request process. This picklist is used with the BPI request path bar.</description>
    <label>BPI Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Request</fullName>
                <default>true</default>
                <label>New Request</label>
            </value>
            <value>
                <fullName>Preparing File</fullName>
            </value>
            <value>
                <fullName>Batch File Ready</fullName>
            </value>
            <value>
                <fullName>Processing Batch</fullName>
            </value>
            <value>
                <fullName>Batch Completed</fullName>
            </value>
            <value>
                <fullName>Closed - Batch not needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>