force-app/main/default/objects/Case/fields/BPI_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>BPI_Service_Type__c</fullName>
    <description>This field is used for the BPI request process - replaces the depreciated Google form that was filled out by the Client team</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPI_Custom</fullName>
                <label>Blue Man Custom Task</label>
            </value>
            <value>
                <fullName>Current Pricing</fullName>
            </value>
            <value>
                <fullName>Green Man Custom Task</fullName>
            </value>
            <value>
                <fullName>BPI_Lawn</fullName>
                <label>Lawn</label>
            </value>
            <value>
                <fullName>BPI_Mulch</fullName>
                <label>Mulch</label>
            </value>
            <value>
                <fullName>BPI_Other</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>POOLCLEANING</fullName>
            </value>
            <value>
                <fullName>Rate Card</fullName>
            </value>
            <value>
                <fullName>SALESCLEAN</fullName>
            </value>
            <value>
                <fullName>BPI_Snow</fullName>
                <label>Snow</label>
            </value>
            <value>
                <fullName>BPI_Sprinkler</fullName>
                <label>Sprinkler</label>
            </value>
            <value>
                <fullName>Trees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>