force-app/main/default/objects/Case/fields/BPI_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>BPI_Special_Instructions__c</fullName>
    <description>This field is used for the BPI request process - replaces the depreciated Google form that was filled out by the Client team</description>
    <inlineHelpText>Anything that the BPI Team MUST know to run this file correctly and add the properties. *Leave BLANK if none*</inlineHelpText>
    <label>Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>