force-app/main/default/objects/Case/fields/BPI_Type_of_Batch__c.field-meta.xml
<CustomField>
    <fullName>BPI_Type_of_Batch__c</fullName>
    <description>This field is used for the BPI request process - replaces the depreciated Google form that was filled out by the Client team</description>
    <label>Type of Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BPI_All Batch - (All existing properties NOT on this list will be CANCELLED)</fullName>
                <label>All Batch - (All existing properties NOT on this list will be CANCELLED)</label>
            </value>
            <value>
                <fullName>All Batch - Only Customers in File - (All existing properties NOT on this list will be CANCELLED for the Gil Customers Included in file)</fullName>
            </value>
            <value>
                <fullName>BPI_Change Batch - (Just ADD these properties, leave everything else alone)</fullName>
                <label>Change Batch - (Just ADD these properties, leave everything else alone)</label>
            </value>
            <value>
                <fullName>BPI_Pricing Only</fullName>
                <label>Pricing Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>