force-app/main/default/objects/Case/fields/BPI_What_Client_is_this_for__c.field-meta.xml
<CustomField>
    <fullName>BPI_What_Client_is_this_for__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is used for the BPI request process - replaces the depreciated Google form that was filled out by the Client team</description>
    <inlineHelpText>Please search for the Client that is associated with this BPI request, if one does not exist, you will need to create a new Account.</inlineHelpText>
    <label>What Client is this for?</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>