force-app/main/default/objects/Case/fields/Case_Number_Formula_Url__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Formula_Url__c</fullName>
    <description>Case number hyperlink (formula)</description>
    <formula>HYPERLINK(&quot;https://taskeasy.lightning.force.com/&quot; &amp; Id, CaseNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>