force-app/main/default/objects/Case/fields/Case_Resolution_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_Reason__c</fullName>
    <description>The reason or disposition why we are considering the case to be closed or no longer needing any follow up.</description>
    <inlineHelpText>What was done in order to for us to consider this case closed or in no further need of action or follow up?</inlineHelpText>
    <label>Case Resolution Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACH Email Sent to AR Team</fullName>
            </value>
            <value>
                <fullName>ANET Failed Payment Collected</fullName>
            </value>
            <value>
                <fullName>Bid Approved - Work Completed</fullName>
            </value>
            <value>
                <fullName>Bid Declined Other Action Taken</fullName>
                <label>Bid Declined - Other Action Taken</label>
            </value>
            <value>
                <fullName>Bid Expired - No Response</fullName>
            </value>
            <value>
                <fullName>Bid Not Needed</fullName>
            </value>
            <value>
                <fullName>Bid Not Needed - Unit Pricing Approved</fullName>
            </value>
            <value>
                <fullName>BPI Request</fullName>
            </value>
            <value>
                <fullName>Case Reopened</fullName>
            </value>
            <value>
                <fullName>Claimant Did Not Proceed</fullName>
            </value>
            <value>
                <fullName>Claim Filed for OA Accident</fullName>
            </value>
            <value>
                <fullName>Client given FYI update on property</fullName>
            </value>
            <value>
                <fullName>Client question answered no further action needed</fullName>
            </value>
            <value>
                <fullName>Client updated associated with property or job</fullName>
            </value>
            <value>
                <fullName>Closed - (Denied) Claimant Unresponsive</fullName>
            </value>
            <value>
                <fullName>Closed - (Denied) Contractor Not At Fault</fullName>
            </value>
            <value>
                <fullName>Closed - (Denied) Not Enough Evidence Provided</fullName>
            </value>
            <value>
                <fullName>Closed - Contractor Repaired Out of Pocket</fullName>
            </value>
            <value>
                <fullName>Contractor Filing w/ Own Insurance</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Finance Payment Resolved</fullName>
            </value>
            <value>
                <fullName>Finance problem or question solved</fullName>
            </value>
            <value>
                <fullName>Incorrect Property Data</fullName>
            </value>
            <value>
                <fullName>Lead Created</fullName>
            </value>
            <value>
                <fullName>Moved</fullName>
            </value>
            <value>
                <fullName>Need New Bid</fullName>
            </value>
            <value>
                <fullName>No Second Chance Required - Bid Only</fullName>
            </value>
            <value>
                <fullName>NTE Used - Work Completed</fullName>
            </value>
            <value>
                <fullName>Property or Task Question Answered</fullName>
            </value>
            <value>
                <fullName>QC-Late 2nd Chance Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>