force-app/main/default/objects/Case/fields/CbsaName__c.field-meta.xml
<CustomField>
    <fullName>CbsaName__c</fullName>
    <label>CBSA Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>