force-app/main/default/objects/Case/fields/Change_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Type__c</fullName>
    <description>Contractor Change Requests</description>
    <inlineHelpText>Select Temporary Change for broken equipment broken vacation, etc.</inlineHelpText>
    <label>Change Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Request_Type</valueSetName>
    </valueSet>
</CustomField>