force-app/main/default/objects/Case/fields/Client_EM_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_EM_Number__c</fullName>
    <label>EM Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>