force-app/main/default/objects/Case/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>The Gil generated client ID to be used for mapping and routing.</description>
    <label>Client ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>