force-app/main/default/objects/Case/fields/Closed_Today__c.field-meta.xml
<CustomField>
    <fullName>Closed_Today__c</fullName>
    <formula>DATEVALUE(ClosedDate) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Today</label>
    <type>Checkbox</type>
</CustomField>