force-app/main/default/objects/Case/fields/CompAmount__c.field-meta.xml
<CustomField>
    <fullName>CompAmount__c</fullName>
    <label>Comp Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>