force-app/main/default/objects/Case/fields/Consumer_ID__c.field-meta.xml
<CustomField>
    <fullName>Consumer_ID__c</fullName>
    <description>The Gil generated consumer ID (customer ID) to be used in mapping and routing.</description>
    <label>TE User ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>