force-app/main/default/objects/Case/fields/Contractor_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Bid_Amount__c</fullName>
    <description>The amount the contractor has bid or has agreed to (unit pricing) in order to complete the additional work on a property. This will be the additional additional amount if the bid is attached to a recurring job or the total amount if it is a one time request.</description>
    <inlineHelpText>How much money does the contractor need to complete the job?   For overgrowth or inhibiting completing a recurring service it will be the additional amount requested.  For one time services/requests, it will be the total amount needed.</inlineHelpText>
    <label>Total Contractor Bid Amount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>