force-app/main/default/objects/Case/fields/Contractor_ID__c.field-meta.xml
<CustomField>
    <fullName>Contractor_ID__c</fullName>
    <description>The Gil generated contractor ID to help with mapping and routing.</description>
    <label>Contractor ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>