force-app/main/default/objects/Case/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <description>This is the contractor name which is associated with any non-contractor submitted case.</description>
    <inlineHelpText>Who is the contractor associated with this case generated by a client or consumer?</inlineHelpText>
    <label>Contractor Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>