force-app/main/default/objects/Case/fields/ContractorComments__c.field-meta.xml
<CustomField>
    <fullName>ContractorComments__c</fullName>
    <description>Description of what additional funds are needed for what</description>
    <label>Contractor Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>