force-app/main/default/objects/Case/fields/Created_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_and_Time__c</fullName>
    <label>Created Date and Time</label>
    <type>DateTime</type>
</CustomField>