force-app/main/default/objects/Case/fields/CurrentIntervalLabel__c.field-meta.xml
<CustomField>
    <fullName>CurrentIntervalLabel__c</fullName>
    <label>Current Interval Label</label>
    <length>254</length>
    <type>Text</type>
</CustomField>