force-app/main/default/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>The name of the client or consumer attached to the property being addressed in the case.</description>
    <inlineHelpText>What is the name of the client or consumer attached to the property in the case?</inlineHelpText>
    <label>Property Owner Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>