force-app/main/default/objects/Case/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>This is the customer type associated with the property in question.  This is meant to separate if it is a client or consumer property regardless of what type of contact initiates the communication.</description>
    <inlineHelpText>Is property being addressed in the case a client or consumer property?</inlineHelpText>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>