force-app/main/default/objects/Case/fields/Day_Created__c.field-meta.xml
<CustomField>
    <fullName>Day_Created__c</fullName>
    <formula>CASE( MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <label>Day Created</label>
    <type>Text</type>
</CustomField>