force-app/main/default/objects/Case/fields/DaysPastDue__c.field-meta.xml
<CustomField>
    <fullName>DaysPastDue__c</fullName>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>