force-app/main/default/objects/Case/fields/Exception_ID__c.field-meta.xml
<CustomField>
    <fullName>Exception_ID__c</fullName>
    <label>Exception ID</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>