force-app/main/default/objects/Case/fields/Exception_Status__c.field-meta.xml
<CustomField>
    <fullName>Exception_Status__c</fullName>
    <label>Exception Status</label>
    <length>120</length>
    <type>Text</type>
</CustomField>