force-app/main/default/objects/Case/fields/External_TE_URL__c.field-meta.xml
<CustomField>
    <fullName>External_TE_URL__c</fullName>
    <description>URL provided by the tracing service or QC service.</description>
    <label>External TE URL</label>
    <type>Url</type>
</CustomField>