force-app/main/default/objects/Case/fields/Final_Client_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Client_Price__c</fullName>
    <description>The final approved client price. Include any taxes where applicable.</description>
    <inlineHelpText>The final approved client price. Include any taxes where applicable.</inlineHelpText>
    <label>Final Client Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>