force-app/main/default/objects/Case/fields/FinalAmountApprovedContractorPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalAmountApprovedContractorPrice__c</fullName>
    <description>Final Approved Amount that we pay the contractor (before insurance)</description>
    <label>Final Amount Approved - Contractor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>