force-app/main/default/objects/Case/fields/Form_Source__c.field-meta.xml
<CustomField>
    <fullName>Form_Source__c</fullName>
    <description>Specific location from where the web form was submitted.  This should only be filled out if the Case Origin equals &quot;Web.&quot;</description>
    <inlineHelpText>Specific location of the web form submission.</inlineHelpText>
    <label>Form Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Consumer App</fullName>
            </value>
            <value>
                <fullName>Consumer Portal</fullName>
            </value>
            <value>
                <fullName>Contractor App</fullName>
            </value>
            <value>
                <fullName>Contractor Portal</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>Home Depot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>