force-app/main/default/objects/Case/fields/IntervalFinishLabel__c.field-meta.xml
<CustomField>
    <fullName>IntervalFinishLabel__c</fullName>
    <label>Interval Finish Label</label>
    <length>254</length>
    <type>Text</type>
</CustomField>