force-app/main/default/objects/Case/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <description>The Job ID associated with the case.</description>
    <inlineHelpText>The Job ID associated with the case.</inlineHelpText>
    <label>Job ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>