force-app/main/default/objects/Case/fields/Last_Auto_Gen_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Auto_Gen_Completion_Date__c</fullName>
    <description>Date/time that the last auto generated task was completed.</description>
    <inlineHelpText>Date/time that the last auto generated task was completed.</inlineHelpText>
    <label>Last Auto Task Completion Date</label>
    <type>DateTime</type>
</CustomField>