force-app/main/default/objects/Case/fields/LastStoppedServiceDate__c.field-meta.xml
<CustomField>
    <fullName>LastStoppedServiceDate__c</fullName>
    <label>Last Stopped Service Date</label>
    <type>Date</type>
</CustomField>