force-app/main/default/objects/Case/fields/LawnOvergrowthBidAmount__c.field-meta.xml
<CustomField>
    <fullName>LawnOvergrowthBidAmount__c</fullName>
    <description>Amount of additional funds asked for by contractor for lawn overgrowth</description>
    <label>Lawn Overgrowth Bid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>