force-app/main/default/objects/Case/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Shows the manager of the case owner</description>
    <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>