force-app/main/default/objects/Case/fields/Manual_Market_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Market_Assignment__c</fullName>
    <formula>IF(ISBLANK(TEXT(State_Assignment__c)), &quot;Not Assigned&quot;, 
IF( 
CONTAINS(&quot;AL:AR:LA:MS:NC:SC:TN&quot;, TEXT(State_Assignment__c)),&quot;South Market&quot;, 
IF( 
CONTAINS( &quot;AK:AZ:CA:CO:HI:ID:MT:NM:NV:OR:UT:WA:WY&quot;, TEXT(State_Assignment__c)),&quot;West Market&quot;, 
IF( 
CONTAINS(&quot;CT:DC:DE:IA:IL:IN:KS:KY:MA:MD:ME:MI:MN:MO:NH:NJ:NY:OH:PA:RI:VA:VT:WI:WV&quot;, TEXT(State_Assignment__c)),&quot;Northeast Market&quot;,
IF(
CONTAINS(&quot;NE:SD:ND:OK:TX&quot;, TEXT(State_Assignment__c)),&quot;Plains Market&quot;, 
IF( 
CONTAINS(&quot;FL:GA&quot;, TEXT(State_Assignment__c)),&quot;Florida and Georgia Market&quot;, 
&quot;Not Assigned&quot; 
) 
) 
) 
) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manual Market Assignment</label>
    <type>Text</type>
</CustomField>