force-app/main/default/objects/Case/fields/Market_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Market_Assignment__c</fullName>
    <formula>IF(
NOT(ISBLANK(Region_ID__c)),  
Auto_Market_Assignment__c , Manual_Market_Assignment__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Assignment</label>
    <type>Text</type>
</CustomField>