force-app/main/default/objects/Case/fields/Market_Region__c.field-meta.xml
<CustomField>
    <fullName>Market_Region__c</fullName>
    <description>Identifies the region in which a specific case is worked, updated via process with State data as criteria.
allows manual updating to un-routed cases</description>
    <label>Market Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arizona and Colorado</fullName>
            </value>
            <value>
                <fullName>Blue Ridge</fullName>
            </value>
            <value>
                <fullName>Carolinas</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>West Coast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>