force-app/main/default/objects/Case/fields/Market_State_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Market_State_Assignment__c</fullName>
    <description>Displays the State Assignment field in read only form, while the State Assignment field is editable in the Visualforce page when required.</description>
    <formula>IF(
   ISBLANK(TEXT(State_Assignment__c)), 
   &quot;Not Assigned&quot;, TEXT(State_Assignment__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market  State Assignment</label>
    <type>Text</type>
</CustomField>