force-app/main/default/objects/Case/fields/MostRecentActiviationDate__c.field-meta.xml
<CustomField>
    <fullName>MostRecentActiviationDate__c</fullName>
    <label>Most Recent Activiation Date</label>
    <type>Date</type>
</CustomField>